--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
     <link rel="preconnect" href="https://amp.dev/documentation/guides-and-tutorials/start/create/basic_markup/">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Lato:ital,wght@1,700&family=Roboto:wght@500&display=swap"
-        rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Lato:ital,wght@1,700&family=Libre+Baskerville&family=Libre+Caslon+Text&family=Roboto:wght@500&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
     <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
@@ -98,7 +95,7 @@
             padding: 0;
             -webkit-font-smoothing: antialiased;
             box-sizing: border-box;
-            font-family: 'Lato';
+            font-family: 'Lato',serif;
         }
 
         #container {
@@ -220,7 +217,13 @@
         .f-s-r {
             font-family: 'Roboto'
         }
+        .f-s-L {
+            font-family: 'Libre Caslon Text', serif;
+        }
 
+        .f-s-LR{
+            font-family: 'Libre Baskerville', serif;
+        }
         .m-t-10 {
             margin: 10px 0px;
         }
@@ -1030,7 +1033,7 @@
                     IMPACT
                 </span> Program
             </h2>
-            <h2 class=" f-w-400 f-s-18 center-txt ">5 Phase Treatment Approach for Type 2 & Pre diabetes</h2>
+            <h2 class=" f-w-400 f-s-18 center-txt f-s-L ">5 Phase Treatment Approach for Type 2 & Pre diabetes</h2>
 
 
 
@@ -1242,7 +1245,7 @@
 
 
                     <h1 class=" f-s-24 f-w-700 center-txt">Our Verified Customer reviews </h1>
-                    <p class="f-s-14 f-w-400 center-txt">1000+ reviews</p>
+                    <p class="f-s-14 f-w-400 center-txt f-s-LR">1000+ reviews</p>
 
                     <div id="over-say-review-wrapper">
 
