--- a/index.html
+++ b/index.html
@@ -1283,7 +1283,7 @@
                                 </amp-img>
                             </div>
                             <div class="over-say-review-detail-wrapper">
-                                <h4 class=" f-s-16 f-w-700 orange-txt">Deepa Kamath</h4>
+                                <h4 class=" f-s-16 f-w-700 orange-txt">Deepa Gupta</h4>
                                 <div style="width:60px; margin: 5px  0px;">
                                     <amp-img src="./assest/stars.webp" width="4" height="1" layout="responsive"
                                         alt="logo">
