--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
         a {
             text-decoration: none;
             cursor: pointer;
-            color: white;
+            
         }
     </style>
 
@@ -908,7 +908,7 @@
                     <div>
 
                         <h3 class=" f-s-18 f-w-700 drk-blu-txt">
-                            Step 1
+                            Step 2
                         </h3>
                         <p class="f-s-14 f-w-400">Meet your team of Expert diabetologists, Health counsellors &
                             dieticians at OneCare Clinics
@@ -926,7 +926,7 @@
                     <div>
 
                         <h3 class="f-s-18 f-w-700 drk-blu-txt">
-                            Step 1
+                            Step 3
                         </h3>
                         <p class="f-s-14 f-w-400">Meet your team of Expert diabetologists, Health counsellors &
                             dieticians at OneCare Clinics
@@ -1475,7 +1475,7 @@
                             <p class="center-txt f-s-12 f-s-i f-w-700">GET DIRECTIONS</p>
                         </div>
                         <div>
-                            <a href="#form-section" class="center-txt f-s-12 f-s-i f-w-700">Book a Consultation</a>
+                            <a href="#form-section" style="color: white;" class="center-txt f-s-12 f-s-i f-w-700">Book a Consultation</a>
                         </div>
                     </div>
                 </div>
@@ -1529,7 +1529,7 @@
                             <p class=" f-s-12 f-s-i f-w-700 center-txt">GET DIRECTIONS</p>
                         </div>
                         <div>
-                            <a href="#form-section" class=" f-s-12 f-s-i f-w-700 center-txt">Book a Consultation</a>
+                            <a href="#form-section"  style="color: white;"  class=" f-s-12 f-s-i f-w-700 center-txt">Book a Consultation</a>
                         </div>
                     </div>
                 </div>
@@ -1582,7 +1582,7 @@
                             <p class=" f-s-12 f-s-i f-w-700 center-txt">GET DIRECTIONS</p>
                         </div>
                         <div>
-                            <a href="#form-section" class=" f-s-12 f-s-i f-w-700 center-txt">Book a Consultation</a>
+                            <a  style="color: white;"  href="#form-section" class=" f-s-12 f-s-i f-w-700 center-txt">Book a Consultation</a>
                         </div>
                     </div>
                 </div>
