--- a/index.html
+++ b/index.html
@@ -1249,7 +1249,7 @@
 
         </section>
 
-        <section id="user-say">
+        <section id="user-say"  style="background-color: white;">
             <div id="user-say-wrapper">
                 <div id="over-say-review">
 
@@ -1451,7 +1451,7 @@
                                         alt="logo">
                                     </amp-img>
                                 </div>
-                                <a href="#080 4680 8989" class="f-s-16 f-w-400">080 4680 8989</a>
+                                <a style="color: white;" href="#080 4680 8989" class="f-s-16 f-w-400">080 4680 8989</a>
                             </div>
                             <div class="flex m-t-10">
                                 <h3 style="margin: 0px 5px;" class="f-s-12">4.9</h3>
@@ -1505,7 +1505,7 @@
                                         alt="logo">
                                     </amp-img>
                                 </div>
-                                <a href="tel:080 4680 8989" class="f-s-16 f-w-400">080 4680 8989</a>
+                                <a style="color: white;" href="tel:080 4680 8989" class="f-s-16 f-w-400">080 4680 8989</a>
                             </div>
                             <div class="flex  m-t-10">
                                 <h3 style="margin:0px 5px;" class="f-s-12">4.9</h3>
@@ -1558,7 +1558,7 @@
                                         alt="logo">
                                     </amp-img>
                                 </div>
-                                <a href="tel:080 4680 8989" class="f-s-16 f-w-400">080 4680 8989</a>
+                                <a style="color: white;" href="tel:080 4680 8989" class="f-s-16 f-w-400">080 4680 8989</a>
                             </div>
                             <div class="flex  m-t-10">
                                 <h3 style="margin:0px  5px; " class="f-s-12">4.9</h3>
