--- a/index.html
+++ b/index.html
@@ -1416,7 +1416,7 @@
             </div>
         </section>
 
-        <section id="location">
+        <section id="location" style="background-color: white;">
             <h2 class=" f-s-24 f-w-700 center-txt" style="color:  #F26975">Our Locations</h2>
             <h3 class=" f-s-14 f-w-500 center-txt">We are at 3 locations in Bengaluru</h3>
 
