--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
     <link rel="canonical" href="./index.html" />
     <meta name="amp-script-src" content="sha384-AGfIK3xyyrcRWR-yI0HPk91gLZag7-SfA97XEQPAr6URvgIR5UqO5YALuid0V-7t">
     <link rel="preconnect" href="https://amp.dev/documentation/guides-and-tutorials/start/create/basic_markup/">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Lato:ital,wght@1,700&family=Libre+Baskerville&family=Libre+Caslon+Text&family=Roboto:wght@500&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Libre+Baskerville&family=Libre+Caslon+Text&family=Roboto&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
     <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
@@ -97,7 +93,7 @@
             padding: 0;
             -webkit-font-smoothing: antialiased;
             box-sizing: border-box;
-            font-family: 'Lato', serif;
+            font-family: 'Lato', sans-serif;
         }
 
         #container {
