--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@ linear-gradient(0deg, #FFF5E7, #FFF5E7);
                 </amp-selector>
             </div>
         </section>
-        <section id="form-section">
+        <section style="padding: 0;" id="form-section">
 
 
             <h1 class=" f-w-700 f-s-24 center-txt">
@@ -885,7 +885,7 @@ linear-gradient(0deg, #FFF5E7, #FFF5E7);
                 </div>
             </form>
         </section>
-        <section id="manage">
+        <section style="background-color: white; padding: 10px;" id="manage">
             <h2 class=" f-s-24 f-w-700 center-txt orange-txt">Manage Your Diabetes <br /> In 3 Easy Steps</h2>
             <div id="manage-wrapper">
                 <div>
