--- a/index.html
+++ b/index.html
@@ -1476,7 +1476,7 @@ linear-gradient(0deg, #FFF5E7, #FFF5E7);
                     </div>
                     <div class="flex map-btn-wrapper">
                         <div>
-                            <p class="center-txt f-s-12 f-s-i f-w-700">GET DIRECTIONS</p>
+                            <p class="center-txt white f-s-12 f-s-i f-w-700">GET DIRECTIONS</p>
                         </div>
                         <div>
                             <a href="#form-section"  class="center-txt white f-s-12 f-s-i f-w-700">BOOK A CONSULTATION</a>
