--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@ linear-gradient(0deg, #FFF5E7, #FFF5E7);
                 </amp-selector>
             </div>
         </section>
-        <section style="padding: 0;" id="form-section">
+        <section id="form-section">
 
 
             <h1 class=" f-w-700 f-s-24 center-txt">
