--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ p{
 
         #manage-wrapper>div {
             /* max-width: 250px; */
-            margin: 20px auto;
+            margin: 25px;
             padding: 20px;
             border-radius: 6px;
         }
@@ -900,9 +900,7 @@ linear-gradient(0deg, #FFF5E7, #FFF5E7);
                         <h3 class="f-s-18 f-w-700 drk-blu-txt">
                             Step 1
                         </h3>
-                        <p class="f-s-14 f-w-400">Meet your team of Expert diabetologists, Health counsellors &
-                            dieticians at OneCare Clinics
-                            and get expert analysis. </p>
+                        <p class="f-s-14 f-w-400">Meet your team of expert diabetologists, health<br/> counsellors, dieticians at OneCare Smart Clinics<br/> & get expert diagnosis & insights on your diabetes <br/>management. </p>
                     </div>
                 </div>
 
@@ -918,9 +916,7 @@ linear-gradient(0deg, #FFF5E7, #FFF5E7);
                         <h3 class=" f-s-18 f-w-700 drk-blu-txt">
                             Step 2
                         </h3>
-                        <p class="f-s-14 f-w-400">Meet your team of Expert diabetologists, Health counsellors &
-                            dieticians at OneCare Clinics
-                            and get expert analysis. </p>
+                        <p class="f-s-14 f-w-400">Get started on a personalised diabetes <br/>management journey designed around your <br/>needs to help you realise 10x better outcomes</p>
                     </div>
                 </div>
 
@@ -936,9 +932,7 @@ linear-gradient(0deg, #FFF5E7, #FFF5E7);
                         <h3 class="f-s-18 f-w-700 drk-blu-txt">
                             Step 3
                         </h3>
-                        <p class="f-s-14 f-w-400">Meet your team of Expert diabetologists, Health counsellors &
-                            dieticians at OneCare Clinics
-                            and get expert analysis. </p>
+                        <p class="f-s-14 f-w-400">Our panel of dedicated Health Coach will be<br/> with you every step of the way guiding you <br/> a better life beyond diabetes </p>
                     </div>
                 </div>
 
