--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ p{
         }
 
         .Diabetologists-img-wrapper {
-            width: 155px;
+            width: 205px;
             margin-right: 10px;
         }
 
@@ -427,7 +427,7 @@ p{
         .map-btn-wrapper>div {
             width: 50%;
             color: white;
-            margin: 2px;
+            margin:0px  2px;
             padding: 10px;
             text-align: center;
             background: linear-gradient(90.13deg, #F8A622 -6.56%, #F16679 177.9%);
@@ -460,7 +460,8 @@ linear-gradient(0deg, #FFF5E7, #FFF5E7);
         }
 
         #location>div>div {
-            margin: 40px 0px;
+border: 1px solid #D1D1D1;
+            margin: 10px 0px;
 
         }
 
@@ -939,7 +940,7 @@ linear-gradient(0deg, #FFF5E7, #FFF5E7);
             </div>
         </section>
         <section id="Diabetologists">
-            <h2 class=" f-s-24 f-w-700 center-txt ">Best Endocrinologists & Diabetologists<span class="orange-txt">in
+            <h2 style="color: black;" class=" f-s-24 f-w-700 center-txt ">Best Endocrinologists & Diabetologists<span class="pink-txt"> In
                     Bangalore</span>
             </h2>
             <div id="Diabetologists-wrapper">
@@ -995,7 +996,7 @@ linear-gradient(0deg, #FFF5E7, #FFF5E7);
                                     alt="logo">
                                 </amp-img>
                             </div>
-                            <h4 class="f-s-12 f-w-500">98% Approval on Practo</h4>
+                            <h4 class="f-s-12 f-w-500">92% Approval on Practo</h4>
                         </div>
 
                     </div>
@@ -1026,7 +1027,7 @@ linear-gradient(0deg, #FFF5E7, #FFF5E7);
                                 <amp-img src="./assest/Thumbs Up.webp" width="1" height="1" layout="responsive" alt="">
                                 </amp-img>
                             </div>
-                            <h4 class=" m-t-10 f-s-12 f-w-500 ">98% Approval on Practo</h4>
+                            <h4 class=" m-t-10 f-s-12 f-w-500 ">87% Approval on Practo</h4>
                         </div>
 
                     </div>
@@ -1039,7 +1040,7 @@ linear-gradient(0deg, #FFF5E7, #FFF5E7);
         </section>
         <section id="impact-program">
 
-            <h2 class=" f-w-700 f-s-30 center-txt">OneCare <span class="orange-txt">
+            <h2 class=" f-w-700 f-s-30 center-txt">OneCare <span class="pink-txt">
                     IMPACT
                 </span> Program
             </h2>
@@ -1470,7 +1471,7 @@ linear-gradient(0deg, #FFF5E7, #FFF5E7);
                     </div>
                     <div class="flex map-btn-wrapper">
                         <div>
-                            <p class="center-txt white f-s-12 f-s-i f-w-700">GET DIRECTIONS</p>
+                            <a href="" class="center-txt white f-s-12 f-s-i f-w-700">GET DIRECTIONS</a>
                         </div>
                         <div>
                             <a href="#form-section"  class="center-txt white f-s-12 f-s-i f-w-700">BOOK A CONSULTATION</a>
@@ -1525,7 +1526,7 @@ linear-gradient(0deg, #FFF5E7, #FFF5E7);
                     </div>
                     <div class="flex map-btn-wrapper">
                         <div>
-                            <p class=" white f-s-12 f-s-i f-w-700 center-txt">GET DIRECTIONS</p>
+                            <a href="" class=" white f-s-12 f-s-i f-w-700 center-txt">GET DIRECTIONS</a>
                         </div>
                         <div>
                             <a href="#form-section"  class=" f-s-12 f-s-i f-w-700 white center-txt">BOOK A CONSULTATION</a>
@@ -1579,7 +1580,7 @@ linear-gradient(0deg, #FFF5E7, #FFF5E7);
                     </div>
                     <div class="flex map-btn-wrapper">
                         <div>
-                            <p class=" white f-s-12 f-s-i f-w-700 center-txt">GET DIRECTIONS</p>
+                            <a href="" class=" white f-s-12 f-s-i f-w-700 center-txt">GET DIRECTIONS</a>
                         </div>
                         <div>
                             <a href="#form-section" class=" white f-s-12 f-s-i f-w-700 center-txt">BOOK A CONSULTATION</a>
