--- a/index.html
+++ b/index.html
@@ -1583,7 +1583,7 @@ border: 1px solid #D1D1D1;
                             <a href="" class=" white f-s-12 f-s-i f-w-700 center-txt">GET DIRECTIONS</a>
                         </div>
                         <div>
-                            <a href="#form-section" class=" white f-s-12 f-s-i f-w-700 center-txt">BOOK A CONSULTATION</a>
+                            <a href="#form-section" class="white f-s-12 f-s-i f-w-700 center-txt">BOOK A CONSULTATION</a>
                         </div>
                     </div>
                 </div>
@@ -1597,7 +1597,7 @@ border: 1px solid #D1D1D1;
             <div style="background: linear-gradient(177.97deg, #D0F2FF 1.72%, #FFFFFF 98.52%)">
                 <div class="flex" style="padding: 20px;">
                     <div>
-                        <h2 class="drk-blu-txt f-s-18 f-w-700">Skip the travel!</h2>
+                        <h2 class="drk-blu-txt f-s-18 f-w-700">Skip The Travel !</h2>
                         <p class="f-w-400 f-s-14">Take Online Doctor Consultation <br />Private video consultation</p>
                     </div>
                     <div style="margin:0px 10px; flex:1;">
@@ -1607,8 +1607,8 @@ border: 1px solid #D1D1D1;
 
                 </div>
 
-                <div class="blue-bg center-txt white" style="padding: 1px; border-radius: 5px; width: 90%; margin: auto;">
-                    <h2 class="f-s-18 f-w-700">Book Free Appointment </h2>
+                <div class="blue-bg center-txt white" style="padding: 10px; border-radius: 5px; width: 90%; margin: auto;">
+                    <a  href="#form-location"class="m-t-10 white f-s-18 f-w-700">Book Free Appointment </a>
                 </div>
 
 
