--- a/index.html
+++ b/index.html
@@ -1624,9 +1624,9 @@ border: 1px solid #D1D1D1;
 
 
                     <div id="tick-head">
-                        <p style="margin-right: 10px;" class="  f-s-12 f-s-700 blu-txt">OneCare Smart<br />
+                        <p style="margin-right: 10px;" class="  f-s-12 f-w-700 blu-txt">OneCare Smart<br />
                             Diabetes Clinics</p>
-                        <p class=" f-s-12 f-s-700  drk-blu-txt">Other
+                        <p class=" f-s-12 f-w-700  drk-blu-txt">Other
                             <br /> Clinics
                         </p>
                     </div>
