--- a/index.html
+++ b/index.html
@@ -1608,7 +1608,7 @@ border: 1px solid #D1D1D1;
                 </div>
 
                 <div class="blue-bg center-txt white" style="padding: 10px; border-radius: 5px; width: 90%; margin: auto;">
-                    <a  href="#form-location"class="m-t-10 white f-s-18 f-w-700">Book Free Appointment </a>
+                    <a href="#form-section" class="m-t-10 white f-s-18 f-w-700">Book Free Appointment </a>
                 </div>
 
 
@@ -1632,7 +1632,7 @@ border: 1px solid #D1D1D1;
                     </div>
                     <div class="flex tick-wrapper">
 
-                        <p class="f-s-14 f-w-400">Top endocrinologists and <br /> Diabetologists</p>
+                        <p class="f-s-14 f-w-600">Top endocrinologists and <br /> Diabetologists</p>
                         <div>
                             <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
@@ -1647,7 +1647,7 @@ border: 1px solid #D1D1D1;
 
                     <div class="flex tick-wrapper">
 
-                        <p class="f-s-14 f-w-400">Personalized & Sustainable <br /> Diabetes control program</p>
+                        <p class="f-s-14 f-w-600">Personalized & Sustainable <br /> Diabetes control program</p>
                         <div>
                             <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
@@ -1662,7 +1662,7 @@ border: 1px solid #D1D1D1;
 
                     <div class="flex tick-wrapper">
 
-                        <p class="f-s-14 f-w-400">Smart & remote monitoring by <br />OneCare mobile app</p>
+                        <p class="f-s-14 f-w-600">Smart & remote monitoring by <br />OneCare mobile app</p>
                         <div>
                             <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
@@ -1677,7 +1677,7 @@ border: 1px solid #D1D1D1;
 
                     <div class="flex tick-wrapper">
 
-                        <p class="f-s-14 f-w-400">24*7 access to expert dietician</p>
+                        <p class="f-s-14 f-w-600">24*7 access to expert dietician</p>
                         <div>
                             <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
@@ -1692,7 +1692,7 @@ border: 1px solid #D1D1D1;
 
                     <div class="flex tick-wrapper">
 
-                        <p class="f-s-14 f-w-400">Dedicated coach with free <br />Weekly Sessions</p>
+                        <p class="f-s-14 f-w-600">Dedicated coach with free <br />Weekly Sessions</p>
                         <div>
                             <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
@@ -1707,7 +1707,7 @@ border: 1px solid #D1D1D1;
 
                     <div class="flex tick-wrapper">
 
-                        <p class="f-s-14 f-w-400">Free unlimited doctor <br /> Follow-ups</p>
+                        <p class="f-s-14 f-w-600">Free unlimited doctor <br /> Follow-ups</p>
                         <div>
                             <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
@@ -1719,7 +1719,7 @@ border: 1px solid #D1D1D1;
                     </div>
                     <div class="flex tick-wrapper">
 
-                        <p class="f-s-14 f-w-400">
+                        <p class="f-s-14 f-w-600">
                             Focus on controlling & <br />Reversing Diabetes</p>
                         <div>
                             <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
