--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@ border: 1px solid #D1D1D1;
         .tick-wrapper {
             display: flex;
             margin: 10px 0px;
-            justify-content: space-around;
+            justify-content: center;
         }
 
         .tick-wrapper>p {
@@ -537,8 +537,10 @@ border: 1px solid #D1D1D1;
         }
 
         .tick-wrapper>div {
-            width: 20px;
+            width:20%;
             margin: 10px 0px;
+            display: flex;
+            justify-content: space-between;
         }
 
         #tick-head {
@@ -1633,14 +1635,18 @@ border: 1px solid #D1D1D1;
                     <div class="flex tick-wrapper">
 
                         <p class="f-s-14 f-w-600">Top endocrinologists and <br /> Diabetologists</p>
-                        <div>
-                            <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
+                        <div >
+                            <amp-img style="width: 35px;" src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
+                            <h4 style="font-size: 8px;">10+ years  of
+                                experience</h4>
                         </div>
                         <div>
-                            <amp-img src="./assest/Box Important.svg" width="1.5" height="1.3" layout="responsive"
+                            <amp-img  style="width: 30px;" src="./assest/Box Important.svg" width="1.5" height="1.3" layout="responsive"
                                 alt="logo">
                             </amp-img>
+                            <h4 style="font-size: 8px;">varied<br/>
+                                experience</h4>
                         </div>
                     </div>
 
@@ -1649,11 +1655,11 @@ border: 1px solid #D1D1D1;
 
                         <p class="f-s-14 f-w-600">Personalized & Sustainable <br /> Diabetes control program</p>
                         <div>
-                            <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
+                            <amp-img   style="width: 25px;"  src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
                         </div>
                         <div>
-                            <amp-img src="./assest/Xbox X.svg" width="1.5" height="1.3" layout="responsive" alt="logo">
+                            <amp-img   style="width: 25px;"  src="./assest/Xbox X.svg" width="1.5" height="1.3" layout="responsive" alt="logo">
                             </amp-img>
                         </div>
                     </div>
@@ -1664,11 +1670,11 @@ border: 1px solid #D1D1D1;
 
                         <p class="f-s-14 f-w-600">Smart & remote monitoring by <br />OneCare mobile app</p>
                         <div>
-                            <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
+                            <amp-img src="./assest/Ok.svg" style="width: 25px;"  width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
                         </div>
                         <div>
-                            <amp-img src="./assest/Xbox X.svg" width="1.5" height="1.3" layout="responsive" alt="logo">
+                            <amp-img src="./assest/Xbox X.svg"  style="width: 25px;"  width="1.5" height="1.3" layout="responsive" alt="logo">
                             </amp-img>
                         </div>
                     </div>
@@ -1679,11 +1685,11 @@ border: 1px solid #D1D1D1;
 
                         <p class="f-s-14 f-w-600">24*7 access to expert dietician</p>
                         <div>
-                            <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
+                            <amp-img src="./assest/Ok.svg"  style="width: 25px;" width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
                         </div>
                         <div>
-                            <amp-img src="./assest/Xbox X.svg" width="1.5" height="1.3" layout="responsive" alt="logo">
+                            <amp-img src="./assest/Xbox X.svg"  style="width: 25px;" width="1.5" height="1.3" layout="responsive" alt="logo">
                             </amp-img>
                         </div>
                     </div>
@@ -1694,11 +1700,11 @@ border: 1px solid #D1D1D1;
 
                         <p class="f-s-14 f-w-600">Dedicated coach with free <br />Weekly Sessions</p>
                         <div>
-                            <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
+                            <amp-img src="./assest/Ok.svg" style="width: 25px;"  width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
                         </div>
                         <div>
-                            <amp-img src="./assest/Xbox X.svg" width="1.5" height="1.3" layout="responsive" alt="logo">
+                            <amp-img src="./assest/Xbox X.svg"  style="width: 25px;" width="1.5" height="1.3" layout="responsive" alt="logo">
                             </amp-img>
                         </div>
                     </div>
@@ -1709,11 +1715,11 @@ border: 1px solid #D1D1D1;
 
                         <p class="f-s-14 f-w-600">Free unlimited doctor <br /> Follow-ups</p>
                         <div>
-                            <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
+                            <amp-img src="./assest/Ok.svg" style="width: 25px;"  width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
                         </div>
                         <div>
-                            <amp-img src="./assest/Xbox X.svg" width="1.5" height="1.3" layout="responsive" alt="logo">
+                            <amp-img src="./assest/Xbox X.svg"  style="width: 25px;" width="1.5" height="1.3" layout="responsive" alt="logo">
                             </amp-img>
                         </div>
                     </div>
@@ -1722,11 +1728,11 @@ border: 1px solid #D1D1D1;
                         <p class="f-s-14 f-w-600">
                             Focus on controlling & <br />Reversing Diabetes</p>
                         <div>
-                            <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
+                            <amp-img src="./assest/Ok.svg"  style="width: 25px;" width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
                         </div>
                         <div>
-                            <amp-img src="./assest/Xbox X.svg" width="1.5" height="1.3" layout="responsive" alt="logo">
+                            <amp-img src="./assest/Xbox X.svg" style="width: 25px;"  width="1.5" height="1.3" layout="responsive" alt="logo">
                             </amp-img>
                         </div>
                     </div>
